Paul - Update markdown cells

--- a/Models/deepLearning/Paul_hybrid_model_with_optuna.ipynb
+++ b/Models/deepLearning/Paul_hybrid_model_with_optuna.ipynb
@@ -1908,20 +1908,20 @@
     "This branch is designed to process the continuous numerical data and the one-hot encoded categorical data. It uses a 1D Convolutional Neural Network (CNN) to learn spatial hierarchies and patterns within this feature set.\n",
     "*   **Slicing (`Lambda`):** A `Lambda` layer first slices the main input tensor to isolate only the numerical and one-hot encoded columns.\n",
     "*   **Reshaping:** The sliced data is reshaped into a 3D tensor, which is the required input format for a `Conv1D` layer.\n",
-    "*   **Convolution (`Conv1D`):** A 1D convolutional layer scans the features to identify local patterns.\n",
+    "*   **Convolution (`Conv1D`):** A 1D convolutional layer with a `relu` activation scans the features to identify local patterns.\n",
     "*   **Pooling (`MaxPooling1D`):** A max-pooling layer downsamples the output, making the learned patterns more robust.\n",
     "*   **Flattening:** The pooled feature map is flattened into a 1D vector to be passed to the final classification layers.\n",
     "\n",
     "### 3. Branch 2: Embeddings for High-Cardinality Features\n",
     "This branch is dedicated to handling the high-cardinality categorical features, which are not suitable for one-hot encoding.\n",
     "*   **Slicing (`Lambda`):** For each high-cardinality feature, a `Lambda` layer slices the main input tensor to extract its specific integer-encoded value.\n",
-    "*   **Embedding (`Embedding`):** An `Embedding` layer converts each integer into a dense, low-dimensional vector. This layer learns a meaningful representation for each category, capturing semantic relationships between them in a way that one-hot encoding cannot.\n",
+    "*   **Embedding (`Embedding`):** An `Embedding` layer converts each integer into a dense, low-dimensional vector. This layer learns a meaningful representation for each category, capturing semantic relationships between them.\n",
     "*   **Flattening:** The resulting embedding vectors are flattened to prepare them for merging.\n",
     "\n",
     "### 4. Merging and Final Classification\n",
     "*   **Concatenation:** The output vector from the CNN branch is concatenated with the output vectors from all the embedding branches, creating a single, comprehensive feature vector.\n",
     "*   **Classification Head:** This final, fully-connected part of the network makes the prediction:\n",
-    "    *   A `Dense` layer with a `relu` activation function learns complex, non-linear combinations of the merged features.\n",
+    "    *   One or two `Dense` layers with `relu` activation functions learn complex, non-linear combinations of the merged features.\n",
     "    *   A `Dropout` layer is applied for regularization to prevent overfitting.\n",
     "    *   The final `Dense` output layer consists of a single neuron with a `sigmoid` activation function, which outputs a probability score between 0 and 1 for the binary classification task (readmitted or not)."
    ]
@@ -1935,13 +1935,13 @@
     "\n",
     "To find the optimal configuration for our model, we employ a systematic hyperparameter tuning process using the Optuna framework. This process is divided into two key functions:\n",
     "\n",
-    "1.  **`build_model(params)`**: This is a centralized factory function that constructs and compiles our hybrid CNN-Embedding model. It accepts a `params` dictionary, allowing us to dynamically create different versions of the model architecture. This approach ensures our model definition is consistent and easy to maintain.\n",
+    "1.  **`build_model(params)`**: This is a centralized factory function that constructs and compiles our hybrid CNN-Embedding model. It accepts a `params` dictionary, allowing us to dynamically create different versions of the model architecture based on the hyperparameters suggested by Optuna.\n",
     "\n",
     "2.  **`objective(trial)`**: This is the core function that Optuna interacts with. For each trial, it performs the following steps:\n",
-    "    *   **Defines the Search Space**: It asks Optuna to suggest a new set of hyperparameters (e.g., `learning_rate`, `cnn_filters`, `dropout_rate`).\n",
+    "    *   **Defines the Search Space**: It asks Optuna to suggest a new set of hyperparameters. This includes the learning rate, CNN filter count and kernel size, embedding dimension, dropout rate, batch size, and the number and size of the final dense layers.\n",
     "    *   **Builds the Model**: It passes the suggested hyperparameters to our `build_model` function.\n",
     "    *   **Trains and Validates**: It trains the model on a portion of the training data, using a `validation_split` and an `EarlyStopping` callback. This is crucial for getting an unbiased performance estimate and preventing overfitting within each trial.\n",
-    "    *   **Stores Results**: The training history is saved to the trial's attributes for later analysis.\n",
+    "    *   **Stores Results**: The training history is saved to the trial's user attributes for later analysis.\n",
     "    *   **Returns the Score**: It returns the best validation loss achieved during the trial, which Optuna then uses to guide its search for the next trial.\n",
     "\n",
     "The `study.optimize()` command executes this process for a set number of trials, intelligently exploring the hyperparameter space to find the combination that minimizes validation loss."
@@ -2285,11 +2285,11 @@
     "\n",
     "1.  **Retrieve Best Hyperparameters**: We extract the `best_params` dictionary from the completed Optuna study. These are the parameters that yielded the lowest validation loss.\n",
     "\n",
-    "2.  **Determine Optimal Training Duration**: To prevent the overfitting, we do not train for a fixed number of epochs. Instead, we inspect the saved `history` from the best trial and find the exact epoch (`optimal_epochs`) at which the validation loss was at its minimum. This is the ideal training duration for our model architecture.\n",
+    "2.  **Determine Optimal Training Duration**: To prevent overfitting, we do not train for a fixed number of epochs. Instead, we inspect the saved `history` from the best trial and find the exact epoch (`optimal_epochs`) at which the validation loss was at its minimum. This is the ideal training duration for our specific model architecture and data.\n",
     "\n",
     "3.  **Build and Train the Final Model**: We call the `build_model` function one last time using the `best_params`. Then, we train this model on the **entire training dataset** for the `optimal_epochs` we just determined. No validation set is used here, as all model-selection decisions have already been made. This step ensures the final model learns from all available training data.\n",
     "\n",
-    "4.  **Final Evaluation**: The fully trained model is evaluated against the completely separate test set. The resulting test accuracy and loss provide the most reliable measure of how the model is expected to perform on new, real-world data."
+    "4.  **Final Evaluation**: The fully trained model is evaluated against the completely separate test set. The resulting test accuracy, loss, and AUC score provide the most reliable measure of how the model is expected to perform on new, real-world data."
    ]
   },
   {
